# ShapeOut2

./: .appveyor.yml  .gitignore  .readthedocs.yml  .travis.yml  CHANGELOG  CREDITS  MANIFEST.in  README.md  README.rst  appveyor.yml  pyproject.toml  setup.py
.appveyor/: ShapeOut2.py  hook-shapeout2.py  make_iss.py  shapeout2.iss_dummy  shapeout2.spec
.travis/: ShapeOut2App.py  ShapeOutApp.py  hook-shapeout2.py  osx_build_app.sh  osx_setup_python.sh
build-recipes/: ShapeOut2.icns  hook-pyqtgraph.py  hook-rpy2.py  hook-shapeout2.py  macos_ShapeOut2.spec  macos_build_app.sh  macos_build_requirements.txt  win_ShapeOut2.spec  win_build_requirements.txt  win_make_iss.py  win_shapeout2.iss_dummy  win_shapeout2.spec
docs/: README.md  conf.py  index.rst  requirements.txt  sec_changelog.rst  sec_devs.rst  sec_getting_started.rst  sec_interface.rst  sec_qg_batch_stats.rst  sec_qg_consistency_check.rst  sec_qg_dcor.rst  sec_qg_export_data.rst  sec_qg_extensions.rst  sec_qg_filtering.rst  sec_qg_lme4.rst  sec_qg_mixed_effects.rst  sec_qg_youngs_modulus.rst  sec_quick_guides.rst  sec_rtdc_basics.rst  sec_z_bib.rst  shapeout.bib
shapeout2/: __init__.py  __main__.py  dataslot.py  extensions.py  filter.py  idiom.py  meta_tool.py  pipeline.py  plot_cache.py  session.py  settings.py  util.py
tests/: conftest.py  requirements.txt  test_extensions.py  test_gui_ana_meta.py  test_gui_basic.py  test_gui_bulk_emodulus.py  test_gui_compute_lme4.py  test_gui_compute_stats.py  test_gui_emodulus.py  test_gui_export_data.py  (+17 more)
tests-manual/: .gitignore  Readme.rst  plot-export.py  plot-export.so2  run-tests.sh
(+164 files in other folders)
